# portablesource-cli

./: .gitignore  Cargo.toml  LICENSE  Readme.md  action.yml  install.sh  portablesource_main.py  pyproject.toml
.github/workflows/: action.yml  debug-binaries.yml  python-publish.yml  rust-release.yml
portablesource/: Version.py  __init__.py  __main__.py  config.py  downloader.py  envs_manager.py  get_gpu.py  install_from_source.py  repository_installer.py  updater_facefusion.py  utils.py
src/: cli.rs  config.rs  envs_manager.rs  error.rs  gpu.rs  lib.rs  main.rs  repository_installer.rs  utils.rs
src/_old/: repository_installer_old.rs
src/installer/: command_runer.rs  dependency_installer.rs  git_manager.rs  main_file_finder.rs  mod.rs  pip_manager.rs  script_generator.rs  server_client.rs
