[package]
name = "portablesource-rs"
version = "1.1.1"
edition = "2021"
authors = ["NeuroDonu <admin@neurodonu.dev>"]
description = "Portable AI/ML Environment Manager - Rust implementation"
license = "Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/portablesource/portablesource-cli"
include = [
    "src/**",
    "Cargo.toml",
    "Readme.md",
    "LICENSE"
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
regex = "1.10"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
zstd = "0.11"
indicatif = "0.17"
futures-util = "0.3"
tempfile = "3.8"
which = "4.4"
walkdir = "2.4"
toml = "0.8"
dirs = "5.0"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
wmi = "0.13"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Wmi",
    "Win32_Security",
    "Win32_Globalization",
    "Win32_Graphics_Dxgi"
] }
