[project.urls]
GitHub    = "https://github.com/portablesource/portablesource"
Changelog = "https://github.com/portablesource/portablesource/releases"
Funding   = ""
Contact   = "https://t.me/neuralchatik"
Download  = "https://github.com/portablesource/portablesource/releases"
Docs      = ""
Homepage  = "https://github.com/portablesource/portablesource"

[tool.hatch.version]
path = "portablesource/Version.py"

[project]
name         = "portablesource"
dynamic      = ["version"]
description  = "Library for portable source!"
authors      = [{name="NeuroDonu", email="112660822+NeuroDonu@users.noreply.github.com."}]
readme       = "Readme.md"
license      = "MIT"
requires-python = "3.10.9"
dependencies = [
    "tqdm",
    "uv"
]

[project.scripts]
portablesource = "portablesource.__main__:main"

[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "portablesource",
]

[tool.hatch.build.targets.sdist]
exclude = ["*"]

[tool.pyright]
exclude = [".venv/**"]
typeCheckingMode = "off"