[project.urls]
GitHub    = "https://github.com/portablesource/portablesource-cli"
Changelog = "https://github.com/portablesource/portablesource-cli/releases"
Contact   = "https://t.me/NeuroDonu"
Download  = "https://github.com/portablesource/portablesource-cli/releases"
Homepage  = "https://github.com/portablesource/portablesource-cli"

[tool.hatch.version]
path = "portablesource/Version.py"

[project]
name         = "portablesource"
dynamic      = ["version"]
description  = "Library for portable source!"
authors      = [{name="NeuroDonu", email="admin@neurodonu.dev"}]
readme       = "Readme.md"
license      = "MIT"
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "requests",
]

[project.scripts]
portablesource = "portablesource.__main__:main"

[build-system]
requires = ["hatchling", "cmake"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "portablesource",
]

[tool.uv]
# UV configuration
index-url = "https://pypi.org/simple"
extra-index-url = []
prerelease = "disallow"
resolution = "highest"

[tool.uv.pip]
# Pip compatibility settings for UV
index-url = "https://pypi.org/simple"
extra-index-url = []
prerelease = "disallow"
resolution = "highest"

[tool.pyright]
exclude = [".venv/**"]
typeCheckingMode = "off"
